Add project files to Git

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kethakishore143.github.io/products",
+  "homepage": "https://kethakishore143.github.io/mytask2j-app",
   "name": "mytask2j-app",
   "version": "0.1.0",
   "private": true,
